--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -32,7 +32,7 @@
       "text/plain": [
        "Index(['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar',\n",
        "       'chlorides', 'free sulfur dioxide', 'total sulfur dioxide', 'density',\n",
-       "       'pH', 'sulphates', 'alcohol', 'quality', 'Id'],\n",
+       "       'pH', 'sulphates', 'alcohol', 'quality'],\n",
        "      dtype='object')"
       ]
      },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "dea0ba85-ffd8-417d-aeaf-3be1a5596759",
    "metadata": {},
    "outputs": [
@@ -215,54 +215,41 @@
        "      <td>6.000000</td>\n",
        "      <td>8.00000</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Id</th>\n",
-       "      <td>1143.0</td>\n",
-       "      <td>804.969379</td>\n",
-       "      <td>463.997116</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>411.00000</td>\n",
-       "      <td>794.00000</td>\n",
-       "      <td>1209.500000</td>\n",
-       "      <td>1597.00000</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       count        mean         std      min        25%  \\\n",
-       "fixed acidity         1143.0    8.311111    1.747595  4.60000    7.10000   \n",
-       "volatile acidity      1143.0    0.531339    0.179633  0.12000    0.39250   \n",
-       "citric acid           1143.0    0.268364    0.196686  0.00000    0.09000   \n",
-       "residual sugar        1143.0    2.532152    1.355917  0.90000    1.90000   \n",
-       "chlorides             1143.0    0.086933    0.047267  0.01200    0.07000   \n",
-       "free sulfur dioxide   1143.0   15.615486   10.250486  1.00000    7.00000   \n",
-       "total sulfur dioxide  1143.0   45.914698   32.782130  6.00000   21.00000   \n",
-       "density               1143.0    0.996730    0.001925  0.99007    0.99557   \n",
-       "pH                    1143.0    3.311015    0.156664  2.74000    3.20500   \n",
-       "sulphates             1143.0    0.657708    0.170399  0.33000    0.55000   \n",
-       "alcohol               1143.0   10.442111    1.082196  8.40000    9.50000   \n",
-       "quality               1143.0    5.657043    0.805824  3.00000    5.00000   \n",
-       "Id                    1143.0  804.969379  463.997116  0.00000  411.00000   \n",
+       "                       count       mean        std      min       25%  \\\n",
+       "fixed acidity         1143.0   8.311111   1.747595  4.60000   7.10000   \n",
+       "volatile acidity      1143.0   0.531339   0.179633  0.12000   0.39250   \n",
+       "citric acid           1143.0   0.268364   0.196686  0.00000   0.09000   \n",
+       "residual sugar        1143.0   2.532152   1.355917  0.90000   1.90000   \n",
+       "chlorides             1143.0   0.086933   0.047267  0.01200   0.07000   \n",
+       "free sulfur dioxide   1143.0  15.615486  10.250486  1.00000   7.00000   \n",
+       "total sulfur dioxide  1143.0  45.914698  32.782130  6.00000  21.00000   \n",
+       "density               1143.0   0.996730   0.001925  0.99007   0.99557   \n",
+       "pH                    1143.0   3.311015   0.156664  2.74000   3.20500   \n",
+       "sulphates             1143.0   0.657708   0.170399  0.33000   0.55000   \n",
+       "alcohol               1143.0  10.442111   1.082196  8.40000   9.50000   \n",
+       "quality               1143.0   5.657043   0.805824  3.00000   5.00000   \n",
        "\n",
-       "                            50%          75%         max  \n",
-       "fixed acidity           7.90000     9.100000    15.90000  \n",
-       "volatile acidity        0.52000     0.640000     1.58000  \n",
-       "citric acid             0.25000     0.420000     1.00000  \n",
-       "residual sugar          2.20000     2.600000    15.50000  \n",
-       "chlorides               0.07900     0.090000     0.61100  \n",
-       "free sulfur dioxide    13.00000    21.000000    68.00000  \n",
-       "total sulfur dioxide   37.00000    61.000000   289.00000  \n",
-       "density                 0.99668     0.997845     1.00369  \n",
-       "pH                      3.31000     3.400000     4.01000  \n",
-       "sulphates               0.62000     0.730000     2.00000  \n",
-       "alcohol                10.20000    11.100000    14.90000  \n",
-       "quality                 6.00000     6.000000     8.00000  \n",
-       "Id                    794.00000  1209.500000  1597.00000  "
+       "                           50%        75%        max  \n",
+       "fixed acidity          7.90000   9.100000   15.90000  \n",
+       "volatile acidity       0.52000   0.640000    1.58000  \n",
+       "citric acid            0.25000   0.420000    1.00000  \n",
+       "residual sugar         2.20000   2.600000   15.50000  \n",
+       "chlorides              0.07900   0.090000    0.61100  \n",
+       "free sulfur dioxide   13.00000  21.000000   68.00000  \n",
+       "total sulfur dioxide  37.00000  61.000000  289.00000  \n",
+       "density                0.99668   0.997845    1.00369  \n",
+       "pH                     3.31000   3.400000    4.01000  \n",
+       "sulphates              0.62000   0.730000    2.00000  \n",
+       "alcohol               10.20000  11.100000   14.90000  \n",
+       "quality                6.00000   6.000000    8.00000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "29c8a74e-4746-450e-97fc-c59f388e4389",
    "metadata": {},
    "outputs": [],
@@ -283,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "5497bdb6-1894-4aec-9e2f-a96a34c0d048",
    "metadata": {},
    "outputs": [],
@@ -306,7 +293,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('wine_quality')",
    "language": "python",
    "name": "python3"
   },
@@ -321,6 +308,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1de0b97b115f7e0949ce7764c2bbe107e03f9b754ed669d94fb8a572fb9319e1"
+   }
   }
  },
  "nbformat": 4,
